# Trading_Agent_Kraken

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  pytest.ini  requirements.txt
backend/app/: audit_logger.py  auth.py  command_parser.py  config.py  crypto_utils.py  database.py  equities.py  kraken_client.py  main.py  models.py  order_service.py  risk_engine.py  schemas.py
backend/app/routers/: audit_router.py  auth_router.py  commands_router.py  kraken_router.py
backend/tests/: conftest.py  test_app_boot.py  test_equity_registry.py  test_kraken_client.py  test_parser.py  test_risk_engine.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/audit/: page.tsx
frontend/app/balances/: page.tsx
frontend/app/connect/: page.tsx
frontend/app/history/: page.tsx
frontend/app/login/: page.tsx
frontend/app/orders/: page.tsx
frontend/app/register/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: ConfirmationModal.tsx  Icons.tsx  Nav.tsx  OrderPreviewCard.tsx
frontend/lib/: api.ts  types.ts
